--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,14 +17,18 @@ jobs:
         fetch-depth: 1
         submodules: true
 
-    - name: Install  cmake
+    - name: Install cmake
       uses: lukka/get-cmake@v4.1.0-rc1
 
     - name: Setup vapoursynth
       uses: deadnews/action-setup-vs@v1.0.4
 
-    - name: Install Vulkan SDK
-      uses: humbletim/install-vulkan-sdk@v1.2
+    - name: Prepare Vulkan SDK
+      uses: humbletim/setup-vulkan-sdk@v1.2.1
+      with:
+        vulkan-query-version: 1.4.304.1
+        vulkan-components: Vulkan-Headers, Vulkan-Loader
+        vulkan-use-cache: true
 
     - name: Build libdav1d
       run: |
