--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,11 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -21,14 +17,12 @@ jobs:
       uses: lukka/get-cmake@v4.1.0-rc1
 
     - name: Setup vapoursynth
-      uses: deadnews/action-setup-vs@v1.0.4
+      uses: Irrational-Encoding-Wizardry/install-vapoursynth-action@0.1.1
 
-    - name: Prepare Vulkan SDK
-      uses: humbletim/setup-vulkan-sdk@v1.2.1
+    - name: Install Vulkan SDK
+      uses: humbletim/install-vulkan-sdk@v1.2
       with:
-        vulkan-query-version: 1.4.304.1
-        vulkan-components: Vulkan-Headers, Vulkan-Loader
-        vulkan-use-cache: true
+        cache: true
 
     - name: Build libdav1d
       run: |
