--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
       uses: lukka/get-cmake@v4.1.0-rc1
 
     - name: Setup vapoursynth
-      uses: Irrational-Encoding-Wizardry/install-vapoursynth-action@0.1.1
+      uses: deadnews/action-setup-vs@v1.0.3
 
     - name: Install Vulkan SDK
       uses: humbletim/install-vulkan-sdk@v1.2
