--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,13 @@ jobs:
 
     - name: Build libdav1d
       run: |
-        sudo apt install libdav1d-dev
+        git clone --depth=1 https://code.videolan.org/videolan/dav1d.git
+        cd dav1d
+        mkdir build && cd build
+        meson setup .. --default-library=static
+        ninja
+        ninja install
+        cd ..
 
     - name: Build FFmpeg
       run: |
@@ -40,9 +46,15 @@ jobs:
 
     - name: Build  AviSynth/VapourSynth plugin
       run: |
-        cmake_settings=(-S . -G Ninja -DENABLE_DAV1D=ON -DENABLE_MFX=OFF -DENABLE_XML2=OFF -DENABLE_VPX=OFF -DENABLE_VULKAN=ON -DZLIB_USE_STATIC_LIBS=OFF -Ddav1d_USE_STATIC_LIBS=OFF -DBUILD_SHARED_LIBS=OFF)
+        cmake_settings=(-S . -G Ninja -DENABLE_DAV1D=ON -DENABLE_MFX=OFF -DENABLE_XML2=OFF -DENABLE_VPX=OFF -DENABLE_VULKAN=ON -DZLIB_USE_STATIC_LIBS=OFF -Ddav1d_USE_STATIC_LIBS=ON -DBUILD_SHARED_LIBS=OFF)
         cmake -B build_vs -DBUILD_AVS_PLUGIN=OFF "${cmake_settings[@]}"
         cmake --build build_vs -j 16
+
+    - name: upload libdav1d build
+      uses: actions/upload-artifact@v4.6.2
+      with:
+        name: libdav1dbuild
+        path: dav1d/build
 
     - name: upload ffmpeg build
       uses: actions/upload-artifact@v4.6.2
